修了一些红

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -5,8 +5,11 @@ public-f net.minecraft.client.renderer.texture.SpriteContents originalImage
 public-f net.minecraft.client.renderer.texture.SpriteContents animatedTexture
 public net.minecraft.client.renderer.texture.SpriteContents$AnimatedTexture frameRowSize
 
-public-f com.mojang.blaze3d.platform.NativeImage isOutsideBounds(II)Z
+public com.mojang.blaze3d.platform.NativeImage isOutsideBounds(II)Z
 
 public net.minecraft.client.resources.model.ModelBakery getModel(Lnet/minecraft/resources/ResourceLocation;)Lnet/minecraft/client/resources/model/UnbakedModel;
 
 public-f net.minecraft.client.renderer.block.model.BlockModel transforms
+
+public net.minecraft.client.resources.model.ModelBakery$ModelBakerImpl
+public net.minecraft.client.resources.model.ModelBakery$ModelBakerImpl <init>(Lnet/minecraft/client/resources/model/ModelBakery;Lnet/minecraft/client/resources/model/ModelBakery$TextureGetter;Lnet/minecraft/client/resources/model/ModelResourceLocation;)V
