--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -13,3 +13,7 @@ public-f net.minecraft.client.renderer.block.model.BlockModel transforms
 
 public net.minecraft.client.resources.model.ModelBakery$ModelBakerImpl
 public net.minecraft.client.resources.model.ModelBakery$ModelBakerImpl <init>(Lnet/minecraft/client/resources/model/ModelBakery;Lnet/minecraft/client/resources/model/ModelBakery$TextureGetter;Lnet/minecraft/client/resources/model/ModelResourceLocation;)V
+
+public-f net.minecraft.world.item.crafting.Ingredient
+
+public net.minecraft.world.item.crafting.Ingredient <init>(Ljava/util/stream/Stream;)V
